# dl_cpp_deploy

./: .gitignore  CMakeLists.txt  CRnnDeploy.h  README.md  main.cpp  run.sh
face_detector_cpp/: CMakeLists.txt  run.sh
face_detector_cpp/include/: FaceDetector.h  Timer.h
face_detector_cpp/model/: mobile0.25.param
face_detector_cpp/src/: FaceDetector.cpp  main.cpp
mnist/model/: best_model_0.99.pth  mnist.pt
mnist_cpp/: README.md  main.cpp  main.cpp.bak  run.sh  run_local.sh
mnist_cpp/mnist/: train.py
yolov5_cpp/: CMakeLists.txt  run.sh
yolov5_cpp/include/: cxxopts.hpp  detector.h  utils.h
yolov5_cpp/src/: detector.cpp  main.cpp
